@@ -1,5 +1,5 @@
 /*
- * Copyright 2012-2021 the original author or authors.
+ * Copyright 2012-2023 the original author or authors.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -19,11 +19,11 @@ package org.springframework.boot.autoconfigure.cassandra;
 import java.io.IOException;
 import java.security.NoSuchAlgorithmException;
 import java.time.Duration;
+import java.util.Collections;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.function.Supplier;
-import java.util.stream.Collectors;
 
 import javax.net.ssl.SSLContext;
 
@@ -39,6 +39,7 @@ import com.typesafe.config.Config;
 import com.typesafe.config.ConfigFactory;
 
 import org.springframework.beans.factory.ObjectProvider;
+import org.springframework.boot.autoconfigure.AutoConfiguration;
 import org.springframework.boot.autoconfigure.EnableAutoConfiguration;
 import org.springframework.boot.autoconfigure.cassandra.CassandraProperties.Connection;
 import org.springframework.boot.autoconfigure.cassandra.CassandraProperties.Controlconnection;
@@ -50,7 +51,6 @@ import org.springframework.boot.autoconfigure.condition.ConditionalOnMissingBean
 import org.springframework.boot.context.properties.EnableConfigurationProperties;
 import org.springframework.boot.context.properties.PropertyMapper;
 import org.springframework.context.annotation.Bean;
-import org.springframework.context.annotation.Configuration;
 import org.springframework.context.annotation.Lazy;
 import org.springframework.context.annotation.Scope;
 import org.springframework.core.io.Resource;
@@ -63,12 +63,22 @@ import org.springframework.core.io.Resource;
  * @author Eddú Meléndez
  * @author Stephane Nicoll
  * @author Steffen F. Qvistgaard
+ * @author Ittay Stern
  * @since 1.3.0
  */
-@Configuration(proxyBeanMethods = false)
+@AutoConfiguration
 @ConditionalOnClass({ CqlSession.class })
 @EnableConfigurationProperties(CassandraProperties.class)
 public class CassandraAutoConfiguration {
+
+	private static final Config SPRING_BOOT_DEFAULTS;
+	static {
+		CassandraDriverOptions options = new CassandraDriverOptions();
+		options.add(DefaultDriverOption.CONTACT_POINTS, Collections.singletonList("127.0.0.1:9042"));
+		options.add(DefaultDriverOption.PROTOCOL_COMPRESSION, "none");
+		options.add(DefaultDriverOption.CONTROL_CONNECTION_TIMEOUT, (int) Duration.ofSeconds(5).toMillis());
+		SPRING_BOOT_DEFAULTS = options.build();
+	}
 
 	@Bean
 	@ConditionalOnMissingBean
@@ -118,100 +128,116 @@ public class CassandraAutoConfiguration {
 	}
 
 	private Config cassandraConfiguration(CassandraProperties properties) {
-		Config config = mapConfig(properties);
-		Resource configFile = properties.getConfig();
-		return (configFile != null) ? applyDefaultFallback(config.withFallback(loadConfig(configFile)))
-				: applyDefaultFallback(config);
-	}
-
-	private Config applyDefaultFallback(Config config) {
 		ConfigFactory.invalidateCaches();
-		return ConfigFactory.defaultOverrides().withFallback(config).withFallback(ConfigFactory.defaultReference())
-				.resolve();
+		Config config = ConfigFactory.defaultOverrides();
+		config = config.withFallback(mapConfig(properties));
+		if (properties.getConfig() != null) {
+			config = config.withFallback(loadConfig(properties.getConfig()));
+		}
+		config = config.withFallback(SPRING_BOOT_DEFAULTS);
+		config = config.withFallback(ConfigFactory.defaultReference());
+		return config.resolve();
 	}
 
-	private Config loadConfig(Resource config) {
+	private Config loadConfig(Resource resource) {
 		try {
-			return ConfigFactory.parseURL(config.getURL());
+			return ConfigFactory.parseURL(resource.getURL());
 		}
 		catch (IOException ex) {
-			throw new IllegalStateException("Failed to load cassandra configuration from " + config, ex);
+			throw new IllegalStateException("Failed to load cassandra configuration from " + resource, ex);
 		}
 	}
 
 	private Config mapConfig(CassandraProperties properties) {
 		CassandraDriverOptions options = new CassandraDriverOptions();
-		PropertyMapper map = PropertyMapper.get();
-		map.from(properties.getSessionName()).whenHasText()
-				.to((sessionName) -> options.add(DefaultDriverOption.SESSION_NAME, sessionName));
-		map.from(properties::getUsername).whenNonNull()
-				.to((username) -> options.add(DefaultDriverOption.AUTH_PROVIDER_USER_NAME, username)
-						.add(DefaultDriverOption.AUTH_PROVIDER_PASSWORD, properties.getPassword()));
-		map.from(properties::getCompression).whenNonNull()
-				.to((compression) -> options.add(DefaultDriverOption.PROTOCOL_COMPRESSION, compression));
+		PropertyMapper map = PropertyMapper.get().alwaysApplyingWhenNonNull();
+		map.from(properties.getSessionName())
+			.whenHasText()
+			.to((sessionName) -> options.add(DefaultDriverOption.SESSION_NAME, sessionName));
+		map.from(properties::getUsername)
+			.to((username) -> options.add(DefaultDriverOption.AUTH_PROVIDER_USER_NAME, username)
+				.add(DefaultDriverOption.AUTH_PROVIDER_PASSWORD, properties.getPassword()));
+		map.from(properties::getCompression)
+			.to((compression) -> options.add(DefaultDriverOption.PROTOCOL_COMPRESSION, compression));
 		mapConnectionOptions(properties, options);
 		mapPoolingOptions(properties, options);
 		mapRequestOptions(properties, options);
 		mapControlConnectionOptions(properties, options);
 		map.from(mapContactPoints(properties))
-				.to((contactPoints) -> options.add(DefaultDriverOption.CONTACT_POINTS, contactPoints));
-		map.from(properties.getLocalDatacenter()).to(
-				(localDatacenter) -> options.add(DefaultDriverOption.LOAD_BALANCING_LOCAL_DATACENTER, localDatacenter));
+			.to((contactPoints) -> options.add(DefaultDriverOption.CONTACT_POINTS, contactPoints));
+		map.from(properties.getLocalDatacenter())
+			.whenHasText()
+			.to((localDatacenter) -> options.add(DefaultDriverOption.LOAD_BALANCING_LOCAL_DATACENTER, localDatacenter));
 		return options.build();
 	}
 
 	private void mapConnectionOptions(CassandraProperties properties, CassandraDriverOptions options) {
 		PropertyMapper map = PropertyMapper.get().alwaysApplyingWhenNonNull();
 		Connection connectionProperties = properties.getConnection();
-		map.from(connectionProperties::getConnectTimeout).asInt(Duration::toMillis)
-				.to((connectTimeout) -> options.add(DefaultDriverOption.CONNECTION_CONNECT_TIMEOUT, connectTimeout));
-		map.from(connectionProperties::getInitQueryTimeout).asInt(Duration::toMillis).to(
-				(initQueryTimeout) -> options.add(DefaultDriverOption.CONNECTION_INIT_QUERY_TIMEOUT, initQueryTimeout));
+		map.from(connectionProperties::getConnectTimeout)
+			.asInt(Duration::toMillis)
+			.to((connectTimeout) -> options.add(DefaultDriverOption.CONNECTION_CONNECT_TIMEOUT, connectTimeout));
+		map.from(connectionProperties::getInitQueryTimeout)
+			.asInt(Duration::toMillis)
+			.to((initQueryTimeout) -> options.add(DefaultDriverOption.CONNECTION_INIT_QUERY_TIMEOUT, initQueryTimeout));
 	}
 
 	private void mapPoolingOptions(CassandraProperties properties, CassandraDriverOptions options) {
 		PropertyMapper map = PropertyMapper.get().alwaysApplyingWhenNonNull();
 		CassandraProperties.Pool poolProperties = properties.getPool();
-		map.from(poolProperties::getIdleTimeout).asInt(Duration::toMillis)
-				.to((idleTimeout) -> options.add(DefaultDriverOption.HEARTBEAT_TIMEOUT, idleTimeout));
-		map.from(poolProperties::getHeartbeatInterval).asInt(Duration::toMillis)
-				.to((heartBeatInterval) -> options.add(DefaultDriverOption.HEARTBEAT_INTERVAL, heartBeatInterval));
+		map.from(poolProperties::getIdleTimeout)
+			.asInt(Duration::toMillis)
+			.to((idleTimeout) -> options.add(DefaultDriverOption.HEARTBEAT_TIMEOUT, idleTimeout));
+		map.from(poolProperties::getHeartbeatInterval)
+			.asInt(Duration::toMillis)
+			.to((heartBeatInterval) -> options.add(DefaultDriverOption.HEARTBEAT_INTERVAL, heartBeatInterval));
 	}
 
 	private void mapRequestOptions(CassandraProperties properties, CassandraDriverOptions options) {
 		PropertyMapper map = PropertyMapper.get().alwaysApplyingWhenNonNull();
 		Request requestProperties = properties.getRequest();
-		map.from(requestProperties::getTimeout).asInt(Duration::toMillis)
-				.to(((timeout) -> options.add(DefaultDriverOption.REQUEST_TIMEOUT, timeout)));
+		map.from(requestProperties::getTimeout)
+			.asInt(Duration::toMillis)
+			.to(((timeout) -> options.add(DefaultDriverOption.REQUEST_TIMEOUT, timeout)));
 		map.from(requestProperties::getConsistency)
-				.to(((consistency) -> options.add(DefaultDriverOption.REQUEST_CONSISTENCY, consistency)));
-		map.from(requestProperties::getSerialConsistency).to(
-				(serialConsistency) -> options.add(DefaultDriverOption.REQUEST_SERIAL_CONSISTENCY, serialConsistency));
+			.to(((consistency) -> options.add(DefaultDriverOption.REQUEST_CONSISTENCY, consistency)));
+		map.from(requestProperties::getSerialConsistency)
+			.to((serialConsistency) -> options.add(DefaultDriverOption.REQUEST_SERIAL_CONSISTENCY, serialConsistency));
 		map.from(requestProperties::getPageSize)
-				.to((pageSize) -> options.add(DefaultDriverOption.REQUEST_PAGE_SIZE, pageSize));
+			.to((pageSize) -> options.add(DefaultDriverOption.REQUEST_PAGE_SIZE, pageSize));
 		Throttler throttlerProperties = requestProperties.getThrottler();
-		map.from(throttlerProperties::getType).as(ThrottlerType::type)
-				.to((type) -> options.add(DefaultDriverOption.REQUEST_THROTTLER_CLASS, type));
+		map.from(throttlerProperties::getType)
+			.as(ThrottlerType::type)
+			.to((type) -> options.add(DefaultDriverOption.REQUEST_THROTTLER_CLASS, type));
 		map.from(throttlerProperties::getMaxQueueSize)
-				.to((maxQueueSize) -> options.add(DefaultDriverOption.REQUEST_THROTTLER_MAX_QUEUE_SIZE, maxQueueSize));
-		map.from(throttlerProperties::getMaxConcurrentRequests).to((maxConcurrentRequests) -> options
-				.add(DefaultDriverOption.REQUEST_THROTTLER_MAX_CONCURRENT_REQUESTS, maxConcurrentRequests));
-		map.from(throttlerProperties::getMaxRequestsPerSecond).to((maxRequestsPerSecond) -> options
-				.add(DefaultDriverOption.REQUEST_THROTTLER_MAX_REQUESTS_PER_SECOND, maxRequestsPerSecond));
-		map.from(throttlerProperties::getDrainInterval).asInt(Duration::toMillis).to(
-				(drainInterval) -> options.add(DefaultDriverOption.REQUEST_THROTTLER_DRAIN_INTERVAL, drainInterval));
+			.to((maxQueueSize) -> options.add(DefaultDriverOption.REQUEST_THROTTLER_MAX_QUEUE_SIZE, maxQueueSize));
+		map.from(throttlerProperties::getMaxConcurrentRequests)
+			.to((maxConcurrentRequests) -> options.add(DefaultDriverOption.REQUEST_THROTTLER_MAX_CONCURRENT_REQUESTS,
+					maxConcurrentRequests));
+		map.from(throttlerProperties::getMaxRequestsPerSecond)
+			.to((maxRequestsPerSecond) -> options.add(DefaultDriverOption.REQUEST_THROTTLER_MAX_REQUESTS_PER_SECOND,
+					maxRequestsPerSecond));
+		map.from(throttlerProperties::getDrainInterval)
+			.asInt(Duration::toMillis)
+			.to((drainInterval) -> options.add(DefaultDriverOption.REQUEST_THROTTLER_DRAIN_INTERVAL, drainInterval));
 	}
 
 	private void mapControlConnectionOptions(CassandraProperties properties, CassandraDriverOptions options) {
 		PropertyMapper map = PropertyMapper.get().alwaysApplyingWhenNonNull();
 		Controlconnection controlProperties = properties.getControlconnection();
-		map.from(controlProperties::getTimeout).asInt(Duration::toMillis)
-				.to((timeout) -> options.add(DefaultDriverOption.CONTROL_CONNECTION_TIMEOUT, timeout));
+		map.from(controlProperties::getTimeout)
+			.asInt(Duration::toMillis)
+			.to((timeout) -> options.add(DefaultDriverOption.CONTROL_CONNECTION_TIMEOUT, timeout));
 	}
 
 	private List<String> mapContactPoints(CassandraProperties properties) {
-		return properties.getContactPoints().stream()
-				.map((candidate) -> formatContactPoint(candidate, properties.getPort())).collect(Collectors.toList());
+		if (properties.getContactPoints() != null) {
+			return properties.getContactPoints()
+				.stream()
+				.map((candidate) -> formatContactPoint(candidate, properties.getPort()))
+				.toList();
+		}
+		return null;
 	}
 
 	private String formatContactPoint(String candidate, int port) {
